--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,10 @@
   color: #61dafb;
 }
 
+.blogUi:focus {
+  outline: none
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
