--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,19 +40,53 @@
 
 .editor-wrapper {
   padding: 1rem;
+  border: 1px solid gray;
+  min-height: calc(100vh - 65px);
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  /* overflow: hidden; */
+  /* margin: 0 5rem; */
 }
+
 
 .DraftEditor-root {
   margin-top: 3rem;
+  padding: 1rem;
+  overflow: hidden;
 }
 
 .menu-inline-wrapper {
-     display: inline-block;
-    visibility: visible;
+     /* display: inline-block; */
+    /* visibility: visible; */
     -webkit-transition: top 75ms ease-out,left 75ms ease-out;
     transition: top 75ms ease-out,left 75ms ease-out;
     -webkit-animation: pop-upwards 180ms forwards linear;
     animation: pop-upwards 180ms forwards linear;
+    background-image: linear-gradient(to bottom,rgba(49,49,47,.99),#262625);
+    background-repeat: repeat-x;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    /* padding: 0 10px; */
+
+
+    position: sticky;
+    top: 5rem;
+      display: -webkit-inline-box;
+      display: -ms-inline-flexbox;
+      display: inline-flex;
+      vertical-align: middle;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: start;
+      -ms-flex-align: start;
+      align-items: flex-start;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      margin: 7rem 0;
 }
 
 /* .menu-inline-wrapper {
@@ -101,24 +135,20 @@
 }
 
 .menu-inline-btn {
-  /* margin: 0 8px; */
   height: 44px;
   line-height: 46px;
-  display: inline-block;
   vertical-align: middle;
   border: 0;
   color: #fff;
-  box-sizing: content-box;
+ 
   padding: 0 .5rem;
-  text-align: left;
-  white-space: normal;
+
   transition: .1s background-color,.1s border-color,.1s color,.1s fill;
   position: relative;
   background: rgba(0,0,0,0);
-  font-size: 16px;
+  /* font-size: 16px; */
   text-decoration: none;
   cursor: pointer;
-  user-select: none;
   font-family: medium-content-sans-serif-font,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
   letter-spacing: 0;
   font-weight: 400;
@@ -126,10 +156,40 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   outline: transparent;
+
+
+
+  overflow: visible;
+  display: inline-block;
+  /* font-weight: 400; */
+  text-align: center;
+  white-space: nowrap;
+  /* vertical-align: middle; */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  /* border: 1px solid transparent; */
+  /* padding: .375rem .75rem; */
+  font-size: 1rem;
+  /* line-height: 1.5; */
+  /* border-radius: .25rem; */
+  /* transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; */
+  /* color: #fff; */
+  /* background-color: #6c757d; */
+  /* border-color: #6c757d; */
+  /* position: relative; */
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 auto;
+  flex: 0 1 auto;
+  width: 100%;
+  /* border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0; */
 }
 
 .menu-inline-btn:hover {
   background-color: rgba(78, 78, 75, 0.99);
+  transform: scale(1.2);
 }
 
 
@@ -146,6 +206,7 @@
   background: rgba(0,0,0,.05);
   white-space: pre-wrap;
 }
+
 
 
 .navbar {
@@ -230,3 +291,74 @@
   background-color: transparent;
   border: 0;
 }
+
+
+
+
+
+
+
+.btn-group {
+  position: sticky;
+  top: 5rem;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    vertical-align: middle;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin: 7rem 0;
+}
+
+.btn-test {
+  overflow: visible;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+  position: relative;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 auto;
+  flex: 0 1 auto;
+  width: 100%;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+
+/* .btn-group {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  border: 2px dashed rgba(114, 186, 94, 0.35);
+  height: 400px;
+  background: rgba(114, 186, 94, 0.05);
+}
+
+.btn-test {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 4rem;
+} */
