--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,25 +40,25 @@
 
 .editor-wrapper {
   padding: 1rem;
+  padding-left: 0;
   border: 1px solid gray;
   min-height: calc(100vh - 65px);
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   align-items: flex-start;
-  /* overflow: hidden; */
-  /* margin: 0 5rem; */
 }
 
 
 .DraftEditor-root {
-  margin: 3rem 2rem 0 2rem;
+  margin: 3rem auto 0 2rem;
   padding: 1rem;
   overflow: hidden;
+  /* margin-top: 3rem; */
+  max-width: 728px;
+  width: 100%;
 }
 
 .menu-inline-wrapper {
-     /* display: inline-block; */
-    /* visibility: visible; */
     -webkit-transition: top 75ms ease-out,left 75ms ease-out;
     transition: top 75ms ease-out,left 75ms ease-out;
     -webkit-animation: pop-upwards 180ms forwards linear;
@@ -67,7 +67,6 @@
     background-repeat: repeat-x;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-    /* padding: 0 10px; */
 
 
     position: sticky;
@@ -87,25 +86,8 @@
       -ms-flex-pack: center;
       justify-content: center;
       margin: 7rem 0;
-      /* margin-right: .5rem; */
 }
 
-/* .menu-inline-wrapper {
-  position: absolute;
-  visibility: hidden;
-  display: none;
-  z-index: 500;
-  -webkit-transition: none;
-  transition: none;
-  top: 0;
-  left: 0;
-  display: inline-block;
-    visibility: visible;
-    -webkit-transition: top 75ms ease-out,left 75ms ease-out;
-    transition: top 75ms ease-out,left 75ms ease-out;
-    -webkit-animation: pop-upwards 180ms forwards linear;
-    animation: pop-upwards 180ms forwards linear;
-} */
 
 .header-dropdown {
   background-color: #262625;
@@ -148,7 +130,6 @@
   transition: .1s background-color,.1s border-color,.1s color,.1s fill;
   position: relative;
   background: rgba(0,0,0,0);
-  /* font-size: 16px; */
   text-decoration: none;
   cursor: pointer;
   font-family: medium-content-sans-serif-font,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
@@ -163,30 +144,17 @@
 
   overflow: visible;
   display: inline-block;
-  /* font-weight: 400; */
   text-align: center;
   white-space: nowrap;
-  /* vertical-align: middle; */
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  /* border: 1px solid transparent; */
-  /* padding: .375rem .75rem; */
   font-size: 1rem;
-  /* line-height: 1.5; */
-  /* border-radius: .25rem; */
-  /* transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; */
-  /* color: #fff; */
-  /* background-color: #6c757d; */
-  /* border-color: #6c757d; */
-  /* position: relative; */
   -webkit-box-flex: 0;
   -ms-flex: 0 1 auto;
   flex: 0 1 auto;
   width: 100%;
-  /* border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0; */
 }
 
 .menu-inline-btn:hover {
@@ -263,7 +231,6 @@
   border-top-right-radius: 0;
   display: block;
 
-  /* top: 100%; */
   left: 0;
   z-index: 1000;
   float: left;
@@ -281,7 +248,6 @@
 }
 
 .dropdown-item {
-
   display: block;
   width: 100%;
   padding: .25rem 1.5rem;
@@ -293,74 +259,3 @@
   background-color: transparent;
   border: 0;
 }
-
-
-
-
-
-
-
-.btn-group {
-  position: sticky;
-  top: 5rem;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    vertical-align: middle;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    margin: 7rem 0;
-}
-
-.btn-test {
-  overflow: visible;
-  display: inline-block;
-  font-weight: 400;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  border: 1px solid transparent;
-  padding: .375rem .75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: .25rem;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
-  position: relative;
-  -webkit-box-flex: 0;
-  -ms-flex: 0 1 auto;
-  flex: 0 1 auto;
-  width: 100%;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-
-/* .btn-group {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  border: 2px dashed rgba(114, 186, 94, 0.35);
-  height: 400px;
-  background: rgba(114, 186, 94, 0.05);
-}
-
-.btn-test {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 4rem;
-} */
