--- a/client/src/App.css
+++ b/client/src/App.css
@@ -274,6 +274,79 @@ html {
   border: 0;
 }
 
-/* .material-icons {
-	font-size: 100%;
-} */
+.modal.fade {
+  position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    /* display: none; */
+    overflow: hidden;
+    outline: 0;
+    z-index: 1072;
+    opacity: 1;
+    overflow-x: hidden;
+    overflow-y: auto;
+    /* display: block; */
+    padding-right: 17px;
+}
+
+.modal-dialog {
+  position: relative;
+    width: auto;
+    margin: .5rem;
+    pointer-events: none;
+    -webkit-transform: translate(0,0);
+    transform: translate(0,0);
+    max-width: 500px;
+    margin: auto;
+}
+
+.modal-content {
+  position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: .3rem;
+    outline: 0;
+}
+
+.modal-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 1rem;
+  border-bottom: 1px solid #e9ecef;
+  border-top-left-radius: .3rem;
+  border-top-right-radius: .3rem;
+}
+
+.modal-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  padding: 1rem;
+  border-top: 1px solid #e9ecef;
+}
