--- a/client/src/App.css
+++ b/client/src/App.css
@@ -299,7 +299,7 @@ html {
     pointer-events: none;
     -webkit-transform: translate(0,0);
     transform: translate(0,0);
-    max-width: 500px;
+    max-width: 700px;
     margin: auto;
 }
 
@@ -335,6 +335,17 @@ html {
   border-bottom: 1px solid #e9ecef;
   border-top-left-radius: .3rem;
   border-top-right-radius: .3rem;
+}
+
+.modal-body {
+  padding: 1.5rem;
+    margin-right: 0;
+    margin-left: 0;
+    border-width: .2rem;
+    border: solid #f7f7f9;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .modal-footer {
