--- a/client/src/App.css
+++ b/client/src/App.css
@@ -335,7 +335,7 @@ html {
   border-top-right-radius: .3rem;
 }
 
-.my-example {
+.modal-body-wrapper {
   position: relative;
   border-width: .2rem;
   max-height: calc(100vh - 200px);
@@ -343,22 +343,6 @@ html {
 }
 
 .modal-body {
-  /* padding: 1.5rem;
-    margin-right: 0;
-    margin-left: 0;
-    border-width: .2rem;
-    border: solid #f7f7f9; */
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between; */
-    /* max-height: calc(100vh - 200px);
-    overflow-y: auto;
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-    -webkit-column-gap: 1.25rem;
-    -moz-column-gap: 1.25rem;
-    column-gap: 1rem; */
     -webkit-column-count: 3;
     -moz-column-count: 3;
     column-count: 3;
@@ -367,25 +351,9 @@ html {
     column-gap: .2rem;
 }
 
-/* .modal-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  padding: 1rem;
-  border-top: 1px solid #e9ecef;
-} */
 
 .image-card {
   position: relative;
-  /* display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; */
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
