add deleteItems function to ImageModal, add DeleteIcon component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -453,3 +453,16 @@ html {
 .close:hover {
   background-color: #e80909;
 }
+
+.modal-footer {
+  display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    /* padding: 1rem; */
+    border-top: 1px solid #dee2e6;
+    border-bottom-right-radius: .3rem;
+    border-bottom-left-radius: .3rem;
+}
