--- a/client/src/App.css
+++ b/client/src/App.css
@@ -567,3 +567,88 @@ html {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
+
+
+
+.cascading-text {
+  position: fixed;
+  text-align: center;
+  /* top: 50%; */
+  /* left: 50%; */
+  bottom: 1vh;
+  background: #32d15d;
+  width: 20%;
+  border: 1px solid transparent;
+  border-radius: .2em;
+  opacity: .85;
+  color: white;
+  font-weight: bold;
+}
+
+.cascading-text--fade[data-animated] .cascading-text__letter {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+-webkit-animation-name: scale;
+  animation-name: scale;
+  animation-iteration-count: infinite;
+}
+
+.cascading-text__letter {
+  display: inline-block;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.cascading-text__letter:nth-of-type(1) {
+  -webkit-animation-delay: 0.16s;
+          animation-delay: 0.16s;
+}
+
+.cascading-text__letter:nth-of-type(2) {
+  -webkit-animation-delay: 0.32s;
+          animation-delay: 0.32s;
+}
+
+.cascading-text__letter:nth-of-type(3) {
+  -webkit-animation-delay: 0.48s;
+          animation-delay: 0.48s;
+}
+.cascading-text__letter:nth-of-type(4) {
+  -webkit-animation-delay: 0.64s;
+          animation-delay: 0.64s;
+}
+
+.cascading-text__letter:nth-of-type(5) {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+}
+.cascading-text__letter:nth-of-type(6) {
+  -webkit-animation-delay: 0.96s;
+          animation-delay: 0.96s;
+}
+
+
+@-webkit-keyframes scale {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  to {
+    -webkit-transform: scale(.7);
+            transform: scale(.7);
+  }
+}
+@keyframes scale {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  to {
+    -webkit-transform: scale(.7);
+            transform: scale(.7);
+  }
+}
