--- a/client/src/App.css
+++ b/client/src/App.css
@@ -585,12 +585,20 @@ html {
   font-weight: bold;
 }
 
-.cascading-text--fade[data-animated] .cascading-text__letter {
+.cascading-text--fade .cascading-text__letter {
   -webkit-transform: scale(1);
   transform: scale(1);
 -webkit-animation-name: scale;
   animation-name: scale;
   animation-iteration-count: infinite;
+}
+
+.cascading-text--pulse .cascading-text__letter {
+  -webkit-transform: scale(.7);
+  transform: scale(.7);
+-webkit-animation-name: pulse;
+  animation-name: pulse;
+  animation-iteration-count: 2;
 }
 
 .cascading-text__letter {
@@ -650,5 +658,41 @@ html {
   to {
     -webkit-transform: scale(.7);
             transform: scale(.7);
+  }
+}
+
+
+
+
+@-webkit-keyframes pulse {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+
+  50% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  to {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes pulse {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+
+  50% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  to {
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
 }
